--- a/Contents/front/static/base/header.html
+++ b/Contents/front/static/base/header.html
@@ -14,12 +14,11 @@
 
 <div class="u-Head">
 
-  <div class="c-Link-Wrapper">
-    <div class="c-Wrapper-Btn-For-Move">
-      <form action="/post_card/view" method="post">
-        <p><input type="submit" value="単語帳を作る"/></p>
-      </form>
-    </div>
+  <div class="c-Link-Wrapper"></div>
+  <div class="c-Wrapper-Btn-For-Move">
+    <form action="/post_card/view" method="post">
+      <p><input class="a-Btn-Base" type="submit" value="ADD CARD"/></p>
+    </form>
   </div>
 
 </div>
